06_rect/grade.txt
Grading at Sun May 20 20:26:08 UTC 2018
Attempting to compile rectangle.c
rectangle.c: In function ‘intersection’:
rectangle.c:53:18: error: expected ‘;’ before ‘}’ token
     ans.height=0l}
                  ^
The code did not compile!

Overall Grade: F
